删除AI Coding乱加日志逻辑，增加规校验